--- a/Sam's Birthday Website/Assets/stylesheets/main.css
+++ b/Sam's Birthday Website/Assets/stylesheets/main.css
@@ -1,25 +1,17 @@
-body {background-image: repeating-radial-gradient(rgb(255, 0, 191), yellow 10%, rgb(40, 160, 240) 15%);
-}
-  
-h1 {text-align: center
-}
-
-h2 {text-align: center
+body {
+  background-image: repeating-radial-gradient(rgb(255, 0, 191), yellow 10%, rgb(40, 160, 240) 15%);
+  text-align: center;
 }
 
-h3 {text-align: center
-}
-
-p {text-align: center
-}
-
-img {display: block;
+img {
+  display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
 }
 
-video {display: block;
+video {
+  display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
